Refactor HTML structure and update CSS styles for improved layout and readability

--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@ body {
     background-color:#09970B!important;
 }
 
+.bg-success{
+    color: #09970B!important;
+}
+
+.table-success{
+    color: #09970B!important;
+}
+
+.bgblack{
+    color: black!important;
+}
