--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0)!important;
     color: rgb(134, 131, 125);
 }
 
@@ -7,14 +7,6 @@ body {
     background-color:#09970B!important;
 }
 
-.bg-success{
-    color: #09970B!important;
-}
-
-.table-success{
-    color: #09970B!important;
-}
-
-.bgblack{
-    color: black!important;
+.green{
+    background-color: #09970B!important;
 }
